# system-perf

./: .gitignore  NOTICE.md  README.md  pyproject.toml
scripts/: update_game_catalog.py
src/system_perf/: __init__.py  __main__.py  analysis.py  cli.py  games.py  hardware.py  presentation.py  storage.py  types.py  workloads.py
src/system_perf/data/: game_catalog.json  title.ansi
tests/: test_core.py
